--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,31 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="144"
+    android:viewportHeight="144">
+  <group android:scaleX="1.2"
+      android:scaleY="1.2"
+      android:translateX="-14.4"
+      android:translateY="-14.4">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M36,2C22.75,2 12,12.75 12,26L12,98C12,111.25 22.75,122 36,122L108,122C121.25,122 132,111.25 132,98L132,26C132,12.75 121.25,2 108,2L36,2Z"
+        android:fillColor="#FFFDD0"
+        android:fillType="nonZero"/>
+    <group>
+      <clip-path
+          android:pathData="M36,2C22.75,2 12,12.75 12,26L12,98C12,111.25 22.75,122 36,122L108,122C121.25,122 132,111.25 132,98L132,26C132,12.75 121.25,2 108,2L36,2Z"/>
+      <group>
+        <clip-path
+            android:pathData="M40,30L104,30L104,94L40,94L40,30Z"/>
+        <group>
+          <clip-path
+              android:pathData="M40,30L104,30L104,94L40,94L40,30Z"/>
+          <path
+              android:pathData="M61.13,37.13L61.13,90.88L70.88,90.88L70.88,37.13L61.13,37.13ZM43.13,43.13L43.13,66.88L48.88,66.88L48.88,43.13L43.13,43.13ZM62.88,46L65.13,46L65.13,86L62.88,86L62.88,46ZM78.97,46.96L73.31,47.98L81.03,91.04L86.69,90.02L78.97,46.96ZM51.13,49.13L51.13,82.88L58.88,82.88L58.88,49.13L51.13,49.13ZM86.31,52.71L82.86,54.18L83.55,55.79L87,54.32L86.31,52.71ZM87.88,56.39L84.43,57.86L85.12,59.47L88.57,58L87.88,56.39ZM89.45,60.07L86,61.54L98.46,90.74L101.91,89.27L89.45,60.07ZM43.13,69.13L43.13,72.88L48.88,72.88L48.88,69.13L43.13,69.13ZM66.88,70L69.13,70L69.13,86L66.88,86L66.88,70ZM43.13,75.13L43.13,90.88L48.88,90.88L48.88,75.13L43.13,75.13ZM51.13,85.13L51.13,90.88L58.88,90.88L58.88,85.13L51.13,85.13Z"
+              android:fillColor="#8B4513"
+              android:fillType="nonZero"/>
+        </group>
+      </group>
+    </group>
+  </group>
 </vector>
